feat: Implement admin authentication and improve UI
Adds authentication for the admin panel to protect editing functionalities.
Refactors the `GradientButton` component to be reusable and includes
support for a disabled state. Updates the site title for brevity.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sameer Bavaji | Web Developer Portfolio</title>
+    <title>Sameer Bavaji | Portfolio</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Welcome to the portfolio of Sameer Bavaji, a passionate web developer specializing in creating modern, responsive, and user-friendly web applications.">
